--- a/generated_html/intro_area.html
+++ b/generated_html/intro_area.html
@@ -1,37 +1,1 @@
-<div class='intro-area'>
-<div class='intro-area__banner'>
-<div class='intro-area__banner-flare'>welcome</div>
-<h1 class='intro-area__heading'>
-<span class='intro-area__heading-span'>MY NAME IS</span>
-<span class='intro-area__heading-span'>JEFF BOWNE</span>
-</h1>
-</div>
-<div class='intro-area__section'>
-<img alt='' class='intro-area__image' src='images/headshot-l.jpg'>
-<div class='intro-area__summary'>
-<p>
-I'm a web developer, a graphic designer, a teacher, a musician, a pedal builder, and a heavy sleeper. I lived in Philly my whole life until recently when my wife and I bought a house 5 minutes outside of it. I build custom effects pedals under the banner of
-<a class='intro-area__summary-link' href='https://www.facebook.com/sixtyfortycustompedals'>Sixty/Forty Custom Pedals</a>
-and I'm the guitar player and singer in a noise-rock/post-hardcore band called
-<a class='intro-area__summary-link' href='http://www.fakingband.com'>FAKING.</a>
-</p>
-<p>
-I built this site with Haml, Sass, jQuery, and Ruby. For details on the tech behind this site check out the footer.
-<a class='intro-area__summary-icon' data-nav-link='' href='#footer'>
-<i class='fa fa-angle-double-down fa-2x'></i>
-</a>
-</p>
-</div>
-</div>
-<div class='intro-area__icons'>
-<a class='intro-area__icon-link' href='https://www.linkedin.com/in/jeffbowne' target='_blank'>
-<i class='fa fa-linkedin fa-3x'></i>
-</a>
-<a class='intro-area__icon-link' href='https://github.com/JeffBowne/new-homepage' target='_blank'>
-<i class='fa fa-github fa-4x'></i>
-</a>
-<a class='intro-area__icon-link' href='http://www.fakingband.com' target='_blank'>
-<i class='fa fa-music fa-3x'></i>
-</a>
-</div>
-</div>
+<div class='intro-area'></div>
