--- a/index.html
+++ b/index.html
@@ -1,338 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script async='' src='https://www.googletagmanager.com/gtag/js?id=UA-123322988-1'></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-123322988-1');
-</script>
-<title>Jeff Bowne</title>
+<title>Faking</title>
 <meta charset='utf-8'>
 <meta content='width = device-width, initial-scale = 1, maximum-scale = 1' name='viewport'>
 <link href='css/styles.css' rel='stylesheet' type='text/css'>
 <link href='css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 <script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-<script src='animations.js'></script>
 <!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
 </head>
 <body id='top'>
 <div class='background'>
 <img alt='background' class='background__image' src='images/parts-bg.png'>
 </div>
-<ul class='primary-nav'><li class='primary-nav__tag'>
-<a class='primary-nav__tag-link' data-nav-link='' href='#top'>
-<i class='fa fa-code fa-3x'></i>
-</a>
-</li><li class='primary-nav__item primary-nav__item--resume'>
-<a class='primary-nav__item-link' data-nav-link='' href='#resume-area'>RESUME</a>
-</li><li class='primary-nav__item primary-nav__item--animals'>
-<a class='primary-nav__item-link' data-nav-link='' href='#animals-area'>ANIMALS</a>
-</li><li class='primary-nav__item primary-nav__item--pedals'>
-<a class='primary-nav__item-link' data-nav-link='' href='#pedals-area'>PEDALS</a>
-</li><li class='primary-nav__item primary-nav__item--design'>
-<a class='primary-nav__item-link' data-nav-link='' href='#design-area'>DESIGN</a>
-</li></ul>
-
-<div class='intro-area'>
-<div class='intro-area__banner'>
-<div class='intro-area__banner-flare'>welcome</div>
-<h1 class='intro-area__heading'>
-<span class='intro-area__heading-span'>MY NAME IS</span>
-<span class='intro-area__heading-span'>JEFF BOWNE</span>
-</h1>
-</div>
-<div class='intro-area__section'>
-<img alt='' class='intro-area__image' src='images/headshot-l.jpg'>
-<div class='intro-area__summary'>
-<p>
-I'm a web developer, a graphic designer, a teacher, a musician, a pedal builder, and a heavy sleeper. I lived in Philly my whole life until recently when my wife and I bought a house 5 minutes outside of it. I build custom effects pedals under the banner of
-<a class='intro-area__summary-link' href='https://www.facebook.com/sixtyfortycustompedals'>Sixty/Forty Custom Pedals</a>
-and I'm the guitar player and singer in a noise-rock/post-hardcore band called
-<a class='intro-area__summary-link' href='http://www.fakingband.com'>FAKING.</a>
-</p>
-<p>
-I built this site with Haml, Sass, jQuery, and Ruby. For details on the tech behind this site check out the footer.
-<a class='intro-area__summary-icon' data-nav-link='' href='#footer'>
-<i class='fa fa-angle-double-down fa-2x'></i>
-</a>
-</p>
-</div>
-</div>
-<div class='intro-area__icons'>
-<a class='intro-area__icon-link' href='https://www.linkedin.com/in/jeffbowne' target='_blank'>
-<i class='fa fa-linkedin fa-3x'></i>
-</a>
-<a class='intro-area__icon-link' href='https://github.com/JeffBowne/new-homepage' target='_blank'>
-<i class='fa fa-github fa-4x'></i>
-</a>
-<a class='intro-area__icon-link' href='http://www.fakingband.com' target='_blank'>
-<i class='fa fa-music fa-3x'></i>
-</a>
-</div>
-</div>
-
 <div class='divider-bar'>
 <i class='divider-bar__icon fa fa-code fa-3x'></i>
 </div>
-<div class='resume-area' id='resume-area'>
-<h2 class='resume-area__heading'>
-<span class='resume-area__heading-span'>A RESUME</span>
-<span class='resume-area__heading-span'>OF SORTS</span>
-</h2>
-<h3 class='resume-area__subheading'>WORK EXPERIENCE</h3>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>Health Union</div>
-<div class='resume-area__place-city'>, Philadelphia PA</div>
-</div>
-<div class='resume-area__time'>Nov 2018 - Present</div>
-<div class='resume-area__detail'>Front-End Engineer</div>
-</div>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>New York Code + Design Academy</div>
-<div class='resume-area__place-city'>, Philadelphia PA</div>
-</div>
-<div class='resume-area__time'>Sept 2018 - Nov 2018</div>
-<div class='resume-area__detail'>Course Instructor</div>
-</div>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>Weblinc</div>
-<div class='resume-area__place-city'>, Philadelphia PA</div>
-</div>
-<div class='resume-area__time'>Feb 2016 - July 2018</div>
-<div class='resume-area__detail'>Front-End Developer</div>
-</div>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>New York Code + Design Academy</div>
-<div class='resume-area__place-city'>, Philadelphia PA</div>
-</div>
-<div class='resume-area__time'>Sept 2015-Jan 2016</div>
-<div class='resume-area__detail'>Teaching Assistant</div>
-</div>
-<h3 class='resume-area__subheading'>VOLUNTEER WORK</h3>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>Animal Care and Control Team</div>
-<div class='resume-area__place-city'>, Philadelphia PA</div>
-</div>
-<div class='resume-area__time'>Sept 2012 - May 2015</div>
-<div class='resume-area__detail'>Foster Care Provider</div>
-</div>
-<h3 class='resume-area__subheading'>TALKS</h3>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>The Philly Front-end/UX Meetup</div>
-</div>
-<div class='resume-area__time'>Nov 4th, 2015</div>
-<div class='resume-area__detail'>"Teaching Concepts with Scrolling CSS Animations"</div>
-</div>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<div class='resume-area__place-name'>NYCDA Web Development Intensive</div>
-</div>
-<div class='resume-area__time'>Jan 21st, 2016</div>
-<div class='resume-area__detail'>Guest lecture on CSS Flexbox Layout</div>
-</div>
-<h3 class='resume-area__subheading'>EDUCATION</h3>
-<div class='resume-area__section'>
-<div class='resume-area__place'>
-<span class='resume-area__place-name'>New York Code + Design Academy</span>
-<span class='resume-area__place-city'>, Philadelphia PA</span>
-</div>
-<div class='resume-area__time'>June 2015 - Aug 2015</div>
-<div class='resume-area__detail'>Web Development Intensive</div>
-<div class='resume-area__note'>&ndash; A twelve week coding bootcamp that covers front and back end web development.</div>
-<div class='resume-area__note'>
-&ndash; My final project was a scrolling paralax animation using svg code. You can check it out
-<a class='resume-area__link' href='http://pedals.jeffbowne.com' target='_blank'>HERE</a>
-</div>
-</div>
-</div>
-
-<div class='divider-bar'>
-<i class='divider-bar__icon fa fa-code fa-3x'></i>
-</div>
-<div class='animals-area' id='animals-area'>
-<h2 class='animals-area__heading'>COMPANION ANIMALS</h2>
-<p class='animals-area__subtext'>My wife and I live with a few animals.</p>
-<div class='animals-area__section animals-area__section--left'>
-<img alt='' class='animals-area__photo' src='images/animals/peanut1.jpg'>
-<div class='animals-area__info'>
-<h3 class='animals-area__name'>Peanut</h3>
-<p class='animals-area__summary'>Peanut is our good dog. He’s what’s called a “Deer Headed” Chihuahua. He was found wandering the streets of North Philly emaciated and with a broken leg. The leg had to be amputated but he’s still got more legs than you so he's doing fine. Also, he'll chew on the edge of your sweater for a half hour and not damage it at all.</p>
-</div>
-</div>
-<div class='animals-area__section animals-area__section--right'>
-<img alt='' class='animals-area__photo' src='images/animals/willie1.jpg'>
-<div class='animals-area__info'>
-<h3 class='animals-area__name'>Willie</h3>
-<p class='animals-area__summary'>Willie is our bad dog and the newest addition to our home. We think he's a Chihuahua/Corgi mix. He was a stray in Virginia and had his right eye removed because of an injury. He’s a real handful but Peanut loves him.</p>
-</div>
-</div>
-<div class='animals-area__section animals-area__section--left'>
-<img alt='' class='animals-area__photo' src='images/animals/marco1.jpg'>
-<div class='animals-area__info'>
-<h3 class='animals-area__name'>Marco</h3>
-<p class='animals-area__summary'>Marco was my first pet as an adult. He and two other kittens were tossed in the bottom of a 30 gallon trashcan and put out on the curb in West Philly where a friend of mine found them. He was a runt and his meows sounded like Tom Waits’ voice pitched up two octaves. He’s real grumpy and hates strangers and he’s my boy.</p>
-</div>
-</div>
-<div class='animals-area__section animals-area__section--right'>
-<img alt='' class='animals-area__photo' src='images/animals/harley1.jpg'>
-<div class='animals-area__info'>
-<h3 class='animals-area__name'>Harley</h3>
-<p class='animals-area__summary'>Harley was one of the kittens in the first litter we fostered. We got really attached to her and decided to keep her after finding homes for her mom, brother, and sister. If we knew we were gonna keep her we would have given her a better name.</p>
-</div>
-</div>
-<div class='animals-area__banner'>
-<img alt='' class='animals-area__banner-photo' src='images/animals/pnw2.jpg'>
-<div class='animals-area__banner-divider'></div>
-<img alt='' class='animals-area__banner-photo' src='images/animals/mnh3.jpg'>
-</div>
-</div>
-
-<div class='divider-bar'>
-<i class='divider-bar__icon fa fa-code fa-3x'></i>
-</div>
-<div class='pedals-area' id='pedals-area'>
-<h2 class='pedals-area__heading'>
-<span class='pedals-area__heading-span'>PEDALS</span>
-<span class='pedals-area__heading-span'>I'VE BUILT</span>
-</h2>
-<div class='pedals-area__gallery gallery'>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/21tank.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/20preamp.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/19podcast.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/18dandelion.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/17warfuzz.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/16toynbee.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/15hot-stove.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/14dead-reverb.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/13violet.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/12dice.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/11boost.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/10rat-mouth.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/09funkzilla.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/08volume.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/07distortion.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/06compass.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/05neon.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/04powerloadsf.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/03leviathan.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/02monkey-rat1.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/pedals/01marco.jpg'>
-</div>
-</div>
-<div class='pedals-area__banner'>
-<a class='pedals-area__banner-link' href='https://www.facebook.com/sixtyfortycustompedals' target='_blank'>
-<img alt='' class='pedals-area__banner-image' src='images/sixtyforty-logo.jpg'>
-</a>
-</div>
-</div>
-
-<div class='divider-bar'>
-<i class='divider-bar__icon fa fa-code fa-3x'></i>
-</div>
-<div class='design-area' id='design-area'>
-<h2 class='design-area__heading'>GRAPHIC DESIGN</h2>
-<div class='design-area__gallery gallery'>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/GV3.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/NWpaint.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/PPainting.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/dbcover.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/digitalcover.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/fakingshirt.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/fakingvices.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/instamat.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/mouthep1.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/tourposter1.jpg'>
-</div>
-<div class='gallery__frame' data-gallery-frame=''>
-<img alt='' class='gallery__image' src='images/design/tourposter2.jpg'>
-</div>
-</div>
-<p class='design-area__subtext'>more to come</p>
-</div>
-
-<div class='footer' id='footer'>
-<h3 class='footer__heading'>ABOUT THIS SITE</h3>
-<div class='footer__page-details'>
-<p>
-I built this site with Haml, Sass, jQuery, and Ruby - using partial file structure for both markup and stylesheets - utilizing BEM name-spacing and elements of ITCSS
-</p>
-<p>
-I used Jekyll as a simple framework so that I could host the site on GitHub Pages but I had to tweak some things in order to use Haml. Jekyll does work with Haml via plugins, but GitHub Pages doesn't support those plugins, so I wrote a Ruby module that does the markup conversion locally before committing the result to GitHub. The module also updates the site as I'm developing by working with Jekyll Serve. It reads all Haml files from the source directory and detects changes by comparing the file's modified time to that of the HTML file of the same name, if one exists, and does a system call for haml to convert the file. Jekyll Serve then regenerates the site.
-</p>
-<p>
-Check out the code in my
-<a class='footer__link' href='https://github.com/JeffBowne/new-homepage' target='_blank'>GitHub Repository</a>
-</p>
-</div>
-</div>
-
 </body>
 </html>
