--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
 </head>
 <body id='top'>
-<div class='background'>
-<img alt='background' class='background__image' src='images/parts-bg.png'>
+<img alt='Faking logo.' class='masthead' src='images/toplogo.png'>
+<div class='main-content'>
+asd sda
 </div>
-<div class='divider-bar'>
-<i class='divider-bar__icon fa fa-code fa-3x'></i>
-</div>
+
 </body>
 </html>
