establish new header/nav layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Faking</title>
+<title>FAKING - Philly Noise Rock</title>
 <meta charset='utf-8'>
 <meta content='width = device-width, initial-scale = 1, maximum-scale = 1' name='viewport'>
 <link href='css/styles.css' rel='stylesheet' type='text/css'>
@@ -10,10 +10,16 @@
 <!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
 </head>
 <body id='top'>
-<img alt='Faking logo.' class='masthead' src='images/toplogo.png'>
 <div class='main-content'>
-asd sda
-</div>
+<img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
+<ul class='primary-nav'><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#shows-area'>LIVE SHOWS</a>
+</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#videos-area'>VIDEOS</a>
+</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#press-area'>PRESS</a>
+</li></ul>
 
+</div>
 </body>
 </html>
