--- a/generated_html/primary_nav.html
+++ b/generated_html/primary_nav.html
@@ -1,13 +1,7 @@
-<ul class='primary-nav'><li class='primary-nav__tag'>
-<a class='primary-nav__tag-link' data-nav-link='' href='#top'>
-<i class='fa fa-code fa-3x'></i>
-</a>
-</li><li class='primary-nav__item primary-nav__item--resume'>
-<a class='primary-nav__item-link' data-nav-link='' href='#resume-area'>RESUME</a>
-</li><li class='primary-nav__item primary-nav__item--animals'>
-<a class='primary-nav__item-link' data-nav-link='' href='#animals-area'>ANIMALS</a>
-</li><li class='primary-nav__item primary-nav__item--pedals'>
-<a class='primary-nav__item-link' data-nav-link='' href='#pedals-area'>PEDALS</a>
-</li><li class='primary-nav__item primary-nav__item--design'>
-<a class='primary-nav__item-link' data-nav-link='' href='#design-area'>DESIGN</a>
+<ul class='primary-nav'><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#shows-area'>LIVE SHOWS</a>
+</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#videos-area'>VIDEOS</a>
+</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#press-area'>PRESS</a>
 </li></ul>
