--- a/generated_html/primary_nav.html
+++ b/generated_html/primary_nav.html
@@ -1,7 +1,7 @@
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#shows-area'>LIVE SHOWS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>LIVE SHOWS</a>
 </li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#videos-area'>VIDEOS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
 </li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#press-area'>PRESS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
 </li></ul>
