--- a/index.html
+++ b/index.html
@@ -11,14 +11,29 @@
 </head>
 <body id='top'>
 <div class='main-content'>
+<div class='main-content__page-header'>
 <img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#shows-area'>LIVE SHOWS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>LIVE SHOWS</a>
 </li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#videos-area'>VIDEOS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
 </li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#press-area'>PRESS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
 </li></ul>
+
+</div>
+<div class='releases'>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/'></iframe>
+<a class='releases_link' href='#'>
+<img alt='Faking, Goddamn Cowards album.' class='releases__cover' src='images/covers/gc-cover-small.jpg'>
+</a>
+<a class='releases_link' href='#'>
+<img alt='Faking, Vices seven inch' class='releases__cover' src='images/covers/vices-cover-small.jpg'>
+</a>
+<a class='releases_link' href='#'>
+<img alt='Faking, Greatest Hits Demo cassette' class='releases__cover' src='images/covers/ghd-cover-small.jpg'>
+</a>
+</div>
 
 </div>
 </body>
