set up cover links and iframe players

--- a/404.html
+++ b/404.html
@@ -3,10 +3,11 @@
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
+    font-size: 24px;
   }
   h1 {
     margin: 30px 0;
-    font-size: 4em;
+    font-size: 6em;
     line-height: 1;
     letter-spacing: -1px;
   }
@@ -15,6 +16,6 @@
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Nope.</strong></p>
-  <p>Ya'll done messed up now.</p>
+  <p>You know it's in the bloodline.</p>
+  <p><strong>You know we are goddamn cowards.</strong></p>
 </div>
