--- a/generated_html/primary_nav.html
+++ b/generated_html/primary_nav.html
@@ -1,7 +1,9 @@
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>LIVE SHOWS</a>
-</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>MUSIC</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
-</li><li class='primary-nav__item'>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
 </li></ul>
