--- a/index.html
+++ b/index.html
@@ -14,25 +14,33 @@
 <div class='main-content__page-header'>
 <img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>LIVE SHOWS</a>
-</li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>MUSIC</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
-</li><li class='primary-nav__item'>
+</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
 </li></ul>
 
 </div>
 <div class='releases'>
-<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/artwork=small/transparent=true/'></iframe>
-<a class='releases_link' href='#'>
-<img alt='Faking, Goddamn Cowards album.' class='releases__cover' src='images/covers/gc-cover-small.jpg'>
-</a>
-<a class='releases_link' href='#'>
-<img alt='Faking, Vices seven inch' class='releases__cover' src='images/covers/vices-cover-small.jpg'>
-</a>
-<a class='releases_link' href='#'>
-<img alt='Faking, Greatest Hits Demo cassette' class='releases__cover' src='images/covers/ghd-cover-small.jpg'>
-</a>
+<div class='releases__cover releases__cover--gdc'>
+<a class='releases__cover-link' href='#gdc'></a>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+</div>
+<div class='releases__cover releases__cover--vices'>
+<a class='releases__cover-link' href='#vices'></a>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=2330586006/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+</div>
+<div class='releases__cover releases__cover--ghd'>
+<a class='releases__cover-link' href='#ghd'></a>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=537193901/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+</div>
+<div class='releases__cover releases__cover--unsane'>
+<a class='releases__cover-link' href='#unsane'></a>
+<iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+</div>
 </div>
 
 </div>
