--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>FAKING - Philly Noise Rock</title>
-<meta charset='utf-8'>
-<meta content='width = device-width, initial-scale = 1, maximum-scale = 1' name='viewport'>
-<link href='css/styles.css' rel='stylesheet' type='text/css'>
-<link href='css/font-awesome.min.css' rel='stylesheet' type='text/css'>
-<script src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-<!-- %link{ rel: 'stylesheet', type: 'text/css', href: '{{ "/css/styles.css" | relative_url }}' } -->
-</head>
-<body id='top'>
+---
+layout: default
+title: FAKING - Philly Noise Rock
+---
 <div class='main-content'>
 <div class='main-content__page-header'>
 <img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
@@ -44,5 +36,3 @@
 </div>
 
 </div>
-</body>
-</html>
