testing liquid layout again

--- a/test.html
+++ b/test.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: FAKING
+title: Testig
 ---
 <div class='main-content'>
 <div class='main-content__page-header'>
 <img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='/test'>MUSIC</a>
+<a class='primary-nav__item-link' data-nav-link='' href='#'>MUSIC</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
@@ -16,6 +16,7 @@ title: FAKING
 </li></ul>
 
 </div>
+shit is being tested
 <div class='releases'>
 <div class='releases__cover releases__cover--gdc'>
 <a class='releases__cover-link' href='#gdc'></a>
