--- a/generated_html/primary_nav.html
+++ b/generated_html/primary_nav.html
@@ -1,5 +1,5 @@
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>MUSIC</a>
+<a class='primary-nav__item-link' data-nav-link='' href='/test'>MUSIC</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
 <a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
