set up multi nested layout - pages - partials framework

--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
 ---
 layout: default
-title: FAKING
+title: FAKINGx
 ---
-<div class='main-content'>
-<div class='main-content__page-header'>
-<img alt='Faking logo.' class='main-content__masthead' src='images/htlogo.png'>
-<ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='/test'>MUSIC</a>
-</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
-</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
-</li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
-</li></ul>
-
-</div>
 <div class='releases'>
 <div class='releases__cover releases__cover--gdc'>
 <a class='releases__cover-link' href='#gdc'></a>
@@ -35,4 +21,3 @@ title: FAKING
 </div>
 </div>
 
-</div>
