--- a/generated_html/primary_nav.html
+++ b/generated_html/primary_nav.html
@@ -1,9 +1,9 @@
 <ul class='primary-nav'><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='/test'>MUSIC</a>
+<a class='primary-nav__item-link' data-nav-link='' href='/music'>MUSIC</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>SHOWS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='/shows'>SHOWS</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>VIDEOS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='/videos'>VIDEOS</a>
 </li><li class='primary-nav__divider'></li><li class='primary-nav__item'>
-<a class='primary-nav__item-link' data-nav-link='' href='#'>PRESS</a>
+<a class='primary-nav__item-link' data-nav-link='' href='/press'>PRESS</a>
 </li></ul>
