create primary nav pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: FAKINGx
+title: FAKING - Philly Noise Rock
 ---
 <div class='releases'>
 <div class='releases__cover releases__cover--gdc'>
