add layout converstion to ruby helper

--- a/generated_html/releases.html
+++ b/generated_html/releases.html
@@ -1,18 +1,18 @@
 <div class='releases'>
 <div class='releases__cover releases__cover--gdc'>
-<a class='releases__cover-link' href='#gdc'></a>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=1455483914/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+<a class='releases__cover-link' href='/release-goddamn-cowards'>Goddamn Cowards</a>
 </div>
 <div class='releases__cover releases__cover--vices'>
-<a class='releases__cover-link' href='#vices'></a>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=2330586006/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+<a class='releases__cover-link' href='/release-vices'>Vices</a>
 </div>
 <div class='releases__cover releases__cover--ghd'>
-<a class='releases__cover-link' href='#ghd'></a>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/album=537193901/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+<a class='releases__cover-link' href='/release-demo'>Greatest Hits Demo</a>
 </div>
 <div class='releases__cover releases__cover--unsane'>
-<a class='releases__cover-link' href='#unsane'></a>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
+<a class='releases__cover-link' href='/release-unsane'>Unsane Tribute Comp</a>
 </div>
 </div>
