write image gallery js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: FAKING - Philly Noise Rock
 </div>
 <div class='releases__cover releases__cover--unsane'>
 <iframe class='releases__player' src='https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/'></iframe>
-<a class='releases__cover-link' href='/release-unsane'>Unsane Tribute Comp</a>
+<a class='releases__cover-link' href='/release-unsane'>A Tribute To Unsane</a>
 </div>
 </div>
 
