--- a/music.html
+++ b/music.html
@@ -3,5 +3,28 @@ layout: default
 title: Faking  Music
 ---
 <div class='music'>
-music
+<div class='music__release music__release--gdc'>
+<a class='music__cover-link' href='/release-goddamn-cowards'>
+<img alt='Faking, Goddam Cowards album.' class='music__cover' src='images/covers/gc-cover-small.jpg'>
+<p>Goddamn Cowards</p>
+</a>
+</div>
+<div class='music__release music__release--vices'>
+<a class='music__cover-link' href='/release-vices'>
+<img alt='Faking, Vices seven inch.' class='music__cover' src='images/covers/vices-cover-small.jpg'>
+<p>Vices</p>
+</a>
+</div>
+<div class='music__release music__release--ghd'>
+<a class='music__cover-link' href='/release-demo'>
+<img alt='Faking, Greatest Hits Demo.' class='music__cover' src='images/covers/ghd-cover-small.jpg'>
+<p>Greatest Hits Demo</p>
+</a>
+</div>
+<div class='music__release music__release--unsane'>
+<a class='music__cover-link' href='/release-unsane'>
+<img alt='Faking, Unsane tribute comps.' class='music__cover' src='images/covers/unsane-cover-small.jpg'>
+<p>A Tribute To Unsane</p>
+</a>
+</div>
 </div>
