--- a/release-unsane.html
+++ b/release-unsane.html
@@ -2,6 +2,23 @@
 layout: default
 title: Faking  - Unsane Tribute Track
 ---
-<div class='unsane'>
-Unsane Tribute Compilation Track
+<div class='release-page'>
+<h2 class='release-page__heading'>A Tribute To Unsane</h2>
+<img alt='Faking, Unsane Tribute Compilation.' class='release-page__cover' src='images/covers/unsane-cover.jpg'>
+<iframe class='release-page__player' src='https://bandcamp.com/EmbeddedPlayer/track=609582958/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'></iframe>
+<div class='release-page__info'>
+<p class='release-page__details'>Our mutilated cover of Unsane's 'Alleged' from "Shattered, Flattered & Covered – A Tribute To Unsane" released by Antena Krzyku Records</p>
+<p class='release-page__date'>Released September 11, 2017</p>
+<p class='release-page__personel'>Jeff Bowne - guitar/vocals</p>
+<p class='release-page__personel'>Phil Schorn - drums</p>
+<p class='release-page__personel'>Mark Diehl - bass</p>
+<p class='release-page__details'>Recorded and mixed by Arik Victor at Creep Recording Studio</p>
+<p class='release-page__details'>Mastering: Manuel Veniani</p>
+<p class='release-page__cta'>
+Buy the LP or CD from
+<a class='releases__dl-link' href='http://www.antenakrzyku.pl/en/shop/va-shattered-flattered-covered-a-tribute-to-unsane2lps-2cds-preorder-release-110917' target='_blank'>
+Antena Krzyku Records.
+</a>
+</p>
+</div>
 </div>
