--- a/shows.html
+++ b/shows.html
@@ -2,6 +2,28 @@
 layout: default
 title: Faking Shows
 ---
-<div class='shows'>
-shows
+<div class='shows' data-gallery=''>
+<h2 class='shows__heading'>Live Shows</h2>
+<div class='shows__row'>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/livespazz.png'>
+</button>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/livems.jpg'>
+</button>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/liveny.png'>
+</button>
+</div>
+<div class='shows__row'>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/livekfn.jpg'>
+</button>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/livehide.png'>
+</button>
+<button class='shows__image-button' data-gallery-image-button=''>
+<img alt='Faking live.' class='shows__photo' src='images/live/livecen.jpg'>
+</button>
+</div>
 </div>
