--- a/release-demo.html
+++ b/release-demo.html
@@ -1,7 +1,23 @@
 ---
 layout: default
-title: Faking  - Unsane Tribute Track
+title: Faking  - Greatest Hits Demo
 ---
-<div class='unsane'>
-Unsane Tribute Compilation Track
+<div class='release-page'>
+<h2 class='release-page__heading'>Greatest Hits Demo</h2>
+<img alt='Faking, Greatest Hits Demo.' class='release-page__cover' src='images/covers/ghd-cover.jpg'>
+<iframe class='release-page__player' src='https://bandcamp.com/EmbeddedPlayer/album=537193901/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'></iframe>
+<div class='release-page__info'>
+<p class='release-page__date'>Released June 3, 2013</p>
+<p class='release-page__personel'>Jeff Bowne - guitar/vocals</p>
+<p class='release-page__personel'>Phil Schorn - drums</p>
+<p class='release-page__personel'>Mark Diehl - bass</p>
+<p class='release-page__details'>Recorded on 1/4" 8 track reel to reel by BJ Howze</p>
+<p class='release-page__details'>at Demo City in May 2013.</p>
+<p class='release-page__cta'>
+Download from
+<a class='releases__dl-link' href='https://faking.bandcamp.com/album/greatest-hits-demo' target='_blank'>
+Bandcamp.
+</a>
+</p>
+</div>
 </div>
