--- a/release-vices.html
+++ b/release-vices.html
@@ -2,6 +2,28 @@
 layout: default
 title: Faking  - Vices
 ---
-<div class='vices'>
-Vices
+<div class='release-page'>
+<h2 class='release-page__heading'>Vices 7"</h2>
+<img alt='Faking, Vices seven inch.' class='release-page__cover' src='images/covers/vices-cover.jpg'>
+<iframe class='release-page__player' src='https://bandcamp.com/EmbeddedPlayer/album=2330586006/size=large/bgcol=333333/linkcol=0f91ff/artwork=none/transparent=true/'></iframe>
+<div class='release-page__info'>
+<p class='release-page__date'>Released October 14, 2014</p>
+<p class='release-page__personel'>Jeff Bowne - guitar/vocals</p>
+<p class='release-page__personel'>Phil Schorn - drums</p>
+<p class='release-page__personel'>Mark Diehl - bass</p>
+<p class='release-page__details'>Recorded and mixed by Joe Smiley</p>
+<p class='release-page__details'>at Red Planet Recording Studio in Nov. 2013</p>
+<p class='release-page__cta'>
+Buy the 7" from
+<a class='releases__dl-link' href='http://www.reptilianrecords.com/products/528444-faking-vices-7-keystone-noise-series' target='_blank'>
+Reptilian Records.
+</a>
+</p>
+<p class='release-page__cta'>
+Download from
+<a class='releases__dl-link' href='https://faking.bandcamp.com/album/vices' target='_blank'>
+Bandcamp.
+</a>
+</p>
+</div>
 </div>
