add footer, style music page

--- a/music.html
+++ b/music.html
@@ -3,28 +3,66 @@ layout: default
 title: Faking  Music
 ---
 <div class='music'>
+<div class='music__external-links'>
+<a class='music__external-link' href='https://faking.bandcamp.com/' target='_blank'>
+<i class='fab fa-bandcamp'></i>
+<span class='music__external-link-text'>Visit our Bandcamp</span>
+</a>
+<a class='music__external-link' href='spotify:artist:2fm80VCrVlWczPKi5HzoB0' target='_blank'>
+<i class='fab fa-spotify'></i>
+<span class='music__external-link-text'>Listen on Spotify</span>
+</a>
+<a class='music__external-link' href='https://www.discogs.com/artist/3451742-Faking-2' target='_blank'>
+<i class='fas fa-compact-disc'></i>
+<span class='music__external-link-text'>View our Discogs</span>
+</a>
+</div>
 <div class='music__release music__release--gdc'>
 <a class='music__cover-link' href='/release-goddamn-cowards'>
 <img alt='Faking, Goddam Cowards album.' class='music__cover' src='images/covers/gc-cover-small.jpg'>
-<p>Goddamn Cowards</p>
 </a>
+<div class='music__release-info'>
+<a class='music__title-link' href='/release-goddamn-cowards'>
+<h2 class='music__title'>Goddamn Cowards</h2>
+</a>
+<p class='music__details'>a CD released in 2016</p>
+<p class='music__details'>by Reptilian Records</p>
+</div>
 </div>
 <div class='music__release music__release--vices'>
 <a class='music__cover-link' href='/release-vices'>
 <img alt='Faking, Vices seven inch.' class='music__cover' src='images/covers/vices-cover-small.jpg'>
-<p>Vices</p>
 </a>
+<div class='music__release-info'>
+<a class='music__title-link' href='/release-vices'>
+<h2 class='music__title'>Vices</h2>
+</a>
+<p class='music__details'>a 7" released in 2014</p>
+<p class='music__details'>by Reptilian Records</p>
+</div>
 </div>
 <div class='music__release music__release--ghd'>
 <a class='music__cover-link' href='/release-demo'>
 <img alt='Faking, Greatest Hits Demo.' class='music__cover' src='images/covers/ghd-cover-small.jpg'>
-<p>Greatest Hits Demo</p>
 </a>
+<div class='music__release-info'>
+<a class='music__title-link' href='/release-demo'>
+<h2 class='music__title'>Greatest Hits Demo</h2>
+</a>
+<p class='music__details'>a cassette released in 2013</p>
+<p class='music__details'>by V4 Records</p>
+</div>
 </div>
 <div class='music__release music__release--unsane'>
 <a class='music__cover-link' href='/release-unsane'>
 <img alt='Faking, Unsane tribute comps.' class='music__cover' src='images/covers/unsane-cover-small.jpg'>
-<p>A Tribute To Unsane</p>
 </a>
+<div class='music__release-info'>
+<a class='music__title-link' href='/release-unsane'>
+<h2 class='music__title'>A Tribute To Unsane</h2>
+</a>
+<p class='music__details'>a track released in 2017</p>
+<p class='music__details'>by Antena Krzyku Records</p>
+</div>
 </div>
 </div>
