--- a/shows.html
+++ b/shows.html
@@ -15,6 +15,16 @@ title: Faking Shows
 <img alt='Faking live.' class='shows__photo' src='images/live/liveny.png'>
 </button>
 </div>
+<div class='shows__listings'>
+<h3 class='shows__listings'>Upcomming Events</h3>
+<div class='shows__event'>
+<span class='shows__date'>Nov. 7</span>
+<span class='shows__venue'>Century Bar</span>
+<span class='shows__city'>Philadelphia, PA</span>
+<span class='shows__bands'>w/ Black Lung, Queen Elephantine, Mutant Flesh</span>
+<a class='shows__event-link' href='https://www.facebook.com/events/2393979930655350/'>Facebook event page</a>
+</div>
+</div>
 <div class='shows__row'>
 <button class='shows__image-button' data-gallery-image-button=''>
 <img alt='Faking live.' class='shows__photo' src='images/live/livekfn.jpg'>
