no comfort page

--- a/music.html
+++ b/music.html
@@ -14,7 +14,7 @@ title: Faking  Music
 </a>
 <a class='music__external-link' href='https://www.discogs.com/artist/3451742-Faking-2' target='_blank'>
 <i class='fas fa-compact-disc'></i>
-<span class='music__external-link-text'>View our Discogs</span>
+<span class='music__external-link-text'>View on Discogs</span>
 </a>
 </div>
 <div class='music__release music__release--gdc'>
