--- a/videos.html
+++ b/videos.html
@@ -4,4 +4,8 @@ title: Faking Videos
 ---
 <div class='videos'>
 <h2 class='videos__heading'>Videos</h2>
+<h3 class='videos__video-title'>Official Music Video for "Not Fine"</h3>
+<iframe class='videos__video-player' src='https://www.youtube.com/embed/9_-eeVlomWo'></iframe>
+<h3 class='videos__video-title'>Interview with Radio Static Philly</h3>
+<iframe class='videos__video-player' src='https://www.youtube.com/embed/n3-6YLqv840'></iframe>
 </div>
